--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sunnyweather.android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".SunnyWeatherApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SunnyWeather"
         tools:targetApi="31">
+        <activity android:name=".ui.weather.WeatherActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
